correct layout issue of playground ludo list page

--- a/src/stylesheets/layout/_main-container.scss
+++ b/src/stylesheets/layout/_main-container.scss
@@ -18,6 +18,12 @@
     animation: slide 0.35s forwards;
 }
 
+@media (max-width: 560px) {
+    .main-container.playground {
+        width: 226px
+    }
+}
+
 .right-sidebar-hover-area{
   z-index: 10;
 }
